ExportDb: Add new API
This new API allows to export the database from a running controller
without needing to use /usr/share/linstor-server/bin/linstor-database
which should only be used while the controller is offline.
