# docs/rest_v1_openapi.yaml
@@ -18,7 +18,7 @@ info:
     ```
 
     After setting this properties restart the controller and the new values should be used.
-  version: 1.27.0
+  version: 1.28.0
   title: Linstor REST API
   contact:
     email: rene.peinthor@linbit.com
@@ -4175,11 +4175,33 @@ paths:
               $ref: '#/components/schemas/ControllerConfig'
   /v1/controller/backup/db:
     post:
+      deprecated: true
       tags:
         - developers
       summary: create a database backup
       operationId: controllerBackupDB
       description: create a h2 database backup. Currently only H2(embedded) db is working.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DatabaseBackupRequest'
+      responses:
+        '201':
+          description: database backup created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiCallRcList'
+        '500':
+          $ref: '#/components/responses/OperationFailed'
+  /v1/controller/database/export:
+    post:
+      tags:
+        - developers
+      summary: export the controller's database
+      operationId: controllerExportDB
+      description: unlike controllerBackupDB this API works with all supported database types and dialects.
       requestBody:
         content:
           application/json:
